deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
      - name: nginx-php
        image: 127.0.0.1:5000/name/app:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: my-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-php-service
spec:
  selector:
    app: nginx-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
