php-fpm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-fpm
spec:
  selector:
    app: php-fpm
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
